# ghc-linking-tests

./: Makefile  libtest.c  libtest2.ll  test.c
ghc-test/: LibTest.hs  LibTest2.hs  Main.hs  build.sh  libtest.cabal
ghc/lib/: LibTest2.hs  build.sh
