name:                libtest
version:             0.1.0.0
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     LibTest2, LibTest
  build-depends:       base >=4.6 && <4.8
  default-language:    Haskell2010
